Úpravy kandidatů a sekce O nás
Vytvořen zbytek profilů se samochválami.
Přidány fotografie všech kandidátů.
V kandidátní listině přesun první 15 do části head.
Sekce O nás, změna viewModu na grouped a vytvoření 3 skupin.
U kandidátů Pavel Gazda, Jan Štěrba - přidána kategorie opa.
U kandidátů z první 15 kteří nejsou piráti - přidána kategorie priz.

--- a/lide/index.html
+++ b/lide/index.html
@@ -3,6 +3,17 @@ layout: members
 title: O nás
 description: Členové a příznivci jsou to dělá Českou pirátskou stranu silnou. Seznamte se Piráty v Opavě.
 keywords: lidé, členové, piráti, pirátky, příznivci
+viewMode: grouped
+groups:
+  - name: Naši zastupitelé
+    sort: ordzas
+    category: zast
+  - name: Předsednictvo místního sdružení
+    sort: ordpks
+    category: pks
+  - name: Naši členové
+    sort: ordopa
+    category: opa
 ---
 
 <blockquote class="c-blockquote c-blockquote--wicon">
