--- a/lide/index.html
+++ b/lide/index.html
@@ -18,5 +18,5 @@ groups:
 
 <blockquote class="c-blockquote c-blockquote--wicon">
   <p>Po úspěšných volbách do poslanecké sněmovny pociťují Piráti velký zájem ze strany veřejnosti. Rádi bychom tuto přízeň společnosti vrátili a v nadcházejících podzimních volbách vpluli do zastupitelstev měst.</p>
-  <cite>Hana Brňáková</cite>
+  <cite>Pavel Kořízek</cite>
 </blockquote>
