--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ rbar:
   <div class="medium-12 large-8 columns">
     <section class="o-section o-section--spaceBot">
       <div class="o-section-inner o-section-inner--leftBlock">
+        <a href="{{ 'assets/files/povolebni_strategie_2018.pdf' | relative_url }}" class="button expanded large">Přečtěte si naší povolební strategii!</a>
+      </div>	
+      <div class="o-section-inner o-section-inner--leftBlock">
         <header class="o-section-header">
           <h1 class="o-section__heading">Aktuální témata</h1>
         </header>
