--- a/lide/index.html
+++ b/lide/index.html
@@ -1,6 +1,6 @@
 ---
 layout: members
-title: O nás
+title: Naši lidé
 description: Členové a příznivci jsou to dělá Českou pirátskou stranu silnou. Seznamte se Piráty v Opavě.
 keywords: lidé, členové, piráti, pirátky, příznivci
 viewMode: grouped
