--- a/vylodeni/index.html
+++ b/vylodeni/index.html
@@ -50,7 +50,7 @@ PIRÁTSKÝ KORÁB,
 </h3>
 </p>
 <br>
-<img class="thumbnail" style="max-width: 50rem;" src="img/korab.jpg">
+<img class="thumbnail" style="max-width: 50rem;" src="img/korab.jpg"  alt="Korab">
 </br>
 <p>
 <b>S ŠÉFEM PIRÁTŮ</b>
@@ -61,7 +61,7 @@ IVANEM BARTOŠEM.
 </h3>
 </p>
 <br>
-<img class="thumbnail" style="max-width: 50rem;" src="img/bartos.jpg">
+<img class="thumbnail" style="max-width: 50rem;" src="img/bartos.jpg"  alt="Bartos">
 </br>
 <p>
 S NÍM SE VYLODÍ OPAVSKÁ POSÁDKA VE SLOŽENÍ: 
